--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.material:material:1.4.0'
     def lifecycle_version = "2.2.0"
     def retrofit_version = "2.9.0"
     def coroutines_version = "1.3.9"
